fixed buttons gap in editor

--- a/src/gutenberg/blocks/button/styles/editor.scss
+++ b/src/gutenberg/blocks/button/styles/editor.scss
@@ -25,7 +25,7 @@
             margin-right: 0;
             margin-left: 0;
 
-            > div {
+            > div.wp-block {
                 width: auto;
                 margin: 0;
                 margin-bottom: var(--gkt-button__gap);
